--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
         window.$docsify = {...basics,
             ...search
         };
+        // 运行命令
+        // docsify serve docs
     </script>
     <!-- Docsify v4 -->
     <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
