添加文档说明

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
             loadNavbar: true, // 加载顶部菜单
         }
 
-        window.$docsify = {...basics,
+        window.$docsify = {
+            ...basics,
             ...search
         };
         // 运行命令
