--- a/index.html
+++ b/index.html
@@ -4,79 +4,95 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="description" content="Description">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
+    <!--  评论  -->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.css">
+    <!--  结束  -->
 </head>
 
 <body>
-    <div id="app"></div>
-    <script>
-        // 搜索配置
-        const search = {
-            search: 'auto', // 默认值
-            search: [
-                '/', // => /README.md
-                '/guide', // => /guide.md
-                '/get-started', // => /get-started.md
-                '/zh-cn/', // => /zh-cn/README.md
-            ],
-            // 完整配置参数
-            search: {
-                maxAge: 86400000, // 过期时间，单位毫秒，默认一天
-                paths: [], // or 'auto'
-                placeholder: 'Type to search',
-                // 支持本地化
-                placeholder: {
-                    '/zh-cn/': '搜索',
-                    '/': 'Type to search'
-                },
-                noData: 'No Results!',
-                // 支持本地化
-                noData: {
-                    '/zh-cn/': '找不到结果',
-                    '/': 'No Results'
-                },
-                // 搜索标题的最大层级, 1 - 6
-                depth: 2,
-                hideOtherSidebarContent: false, // 是否隐藏其他侧边栏内容
-                // 避免搜索索引冲突
-                // 同一域下的多个网站之间
-                namespace: 'website-1',
-                // 使用不同的索引作为路径前缀（namespaces）
-                // 注意：仅适用于 paths: 'auto' 模式
-                //
-                // 初始化索引时，我们从侧边栏查找第一个路径
-                // 如果它与列表中的前缀匹配，我们将切换到相应的索引
-                pathNamespaces: ['/zh-cn', '/ru-ru', '/ru-ru/v1'],
-                // 您可以提供一个正则表达式来匹配前缀。在这种情况下，
-                // 匹配到的字符串将被用来识别索引
-                pathNamespaces: /^(\/(zh-cn|ru-ru))?(\/(v1|v2))?/
-            }
+<div id="app"></div>
+<script>
+    // 搜索配置
+    const search = {
+        // 完整配置参数
+        search: {
+            maxAge: 86400000, // 过期时间，单位毫秒，默认一天
+            paths: [], // or 'auto'
+            placeholder: '输入关键词搜索',
+            noData: '为找到相关关键词',
+            // 搜索标题的最大层级, 1 - 6
+            depth: 2,
+            hideOtherSidebarContent: false, // 是否隐藏其他侧边栏内容
+            // 避免搜索索引冲突
+            // 同一域下的多个网站之间
+            // 使用不同的索引作为路径前缀（namespaces）
+            // 注意：仅适用于 paths: 'auto' 模式
+            //
+            // 初始化索引时，我们从侧边栏查找第一个路径
+            // 如果它与列表中的前缀匹配，我们将切换到相应的索引
+            pathNamespaces: ['/zh-cn', '/ru-ru', '/ru-ru/v1'],
+            // 您可以提供一个正则表达式来匹配前缀。在这种情况下，
+            // 匹配到的字符串将被用来识别索引
+            pathNamespaces: /^(\/(zh-cn|ru-ru))?(\/(v1|v2))?/
         }
+    }
 
-        // 基础配置
-        const basics = {
-            name: '',
-            repo: 'https://github.com/Hanxueqing/Douban-Movie.git',
-            onlyCover: true, // 首页是否只显示背景
-            coverpage: true,
-            loadSidebar: true, // 后就不会生成默认的侧边栏了
-            autoHeader: true,
-            loadNavbar: true, // 加载顶部菜单
+    // 基础配置
+    const basics = {
+        name: '',
+        repo: 'https://github.com/Hanxueqing/Douban-Movie.git',
+        onlyCover: true, // 首页是否只显示背景
+        coverpage: true,
+        loadSidebar: true, // 后就不会生成默认的侧边栏了
+        autoHeader: true,
+        loadNavbar: true, // 加载顶部菜单
+        routerMode: 'hash', // default: 'hash' history => nginx try_files $uri $uri/ /index.html;
+        copyCode: {
+            buttonText: '复制',
+            errorText: '出错啦',
+            successText: '成功'
+        },
+        count:{
+            countable:true,
+            fontsize:'0.9em',
+            color:'rgb(90,90,90)',
+            language:'chinese'
         }
+    }
 
-        window.$docsify = {
-            ...basics,
-            ...search
-        };
-        // 运行命令
-        // docsify serve docs
-    </script>
-    <!-- Docsify v4 -->
-    <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
-    <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+    window.$docsify = {
+        ...basics,
+        ...search
+    };
+    
+    // 运行命令
+    // docsify serve docs
+</script>
+<script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+<script src="https://unpkg.com/docsify-copy-code@2"></script>
+<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
+<script src="//unpkg.com/docsify-count/dist/countable.js"></script>
+<!-- 评论   -->
+<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/gitalk.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js"></script>
+
+<script>
+    // 评论插件
+    const gitalk = new Gitalk({
+        clientID: '92ab8a5b08b100114a00', // 申请下来的ID
+        clientSecret: '2bab4805e4fb00609a8efe96583b4e6412cc67af',  // 申请下来的密码
+        repo: 'docs', // 仓库名字
+        owner: 'hangjob', // 你的Github名字
+        admin: ['hangjob'], // 你的Github名字和其他管理员的名字
+        // facebook-like distraction free mode
+        distractionFreeMode: true
+    })
+</script>
 </body>
 
 </html>
