--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         onlyCover: true, // 首页是否只显示背景
         coverpage: true,
         loadSidebar: true, // 后就不会生成默认的侧边栏了
-        autoHeader: true,
+        autoHeader: false,
         loadNavbar: true, // 加载顶部菜单
         routerMode: 'hash', // default: 'hash' history => nginx try_files $uri $uri/ /index.html;
         copyCode: {
