--- a/index.html
+++ b/index.html
@@ -14,41 +14,23 @@
 </head>
 
 <body>
-<div id="app"></div>
-<div id="gitalk-container"></div>
+<div id="app">嘿，小可爱，正在加载中...</div>
 <script>
     // 搜索配置
     const search = {
-        // 完整配置参数
         search: {
-            maxAge: 86400000, // 过期时间，单位毫秒，默认一天
-            paths: [], // or 'auto'
             placeholder: '输入关键词搜索',
-            noData: '为找到相关关键词',
-            // 搜索标题的最大层级, 1 - 6
-            depth: 2,
-            hideOtherSidebarContent: false, // 是否隐藏其他侧边栏内容
-            // 避免搜索索引冲突
-            // 同一域下的多个网站之间
-            // 使用不同的索引作为路径前缀（namespaces）
-            // 注意：仅适用于 paths: 'auto' 模式
-            //
-            // 初始化索引时，我们从侧边栏查找第一个路径
-            // 如果它与列表中的前缀匹配，我们将切换到相应的索引
-            pathNamespaces: ['/zh-cn', '/ru-ru', '/ru-ru/v1'],
-            // 您可以提供一个正则表达式来匹配前缀。在这种情况下，
-            // 匹配到的字符串将被用来识别索引
-            pathNamespaces: /^(\/(zh-cn|ru-ru))?(\/(v1|v2))?/
-        }
+        },
     }
 
     // 基础配置
     const basics = {
         name: '',
         repo: 'https://github.com/Hanxueqing/Douban-Movie.git',
+        externalLinkTarget: '_blank',
         onlyCover: true, // 首页是否只显示背景
         coverpage: true,
-        loadSidebar: true, // 后就不会生成默认的侧边栏了
+        loadSidebar: true,
         autoHeader: true,
         loadNavbar: true, // 加载顶部菜单
         routerMode: 'hash', // default: 'hash' history => nginx try_files $uri $uri/ /index.html;
@@ -76,6 +58,7 @@
     // docsify serve docs
 </script>
 <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/docsify@4.10.0/lib/docsify.min.js"></script>-->
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
 <script src="https://unpkg.com/docsify-copy-code@2"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
