--- a/index.html
+++ b/index.html
@@ -64,21 +64,21 @@
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
 <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
 <!-- 评论   -->
-<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/gitalk.min.js"></script>
-<script src="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js"></script>
+<!--<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/gitalk.min.js"></script>-->
+<!--<script src="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js"></script>-->
 
-<script>
-    // 评论插件
-    const gitalk = new Gitalk({
-        clientID: '92ab8a5b08b100114a00', // 申请下来的ID
-        clientSecret: '2bab4805e4fb00609a8efe96583b4e6412cc67af',  // 申请下来的密码
-        repo: 'docs', // 仓库名字
-        owner: 'hangjob', // 你的Github名字
-        admin: ['hangjob'], // 你的Github名字和其他管理员的名字
-        // facebook-like distraction free mode
-        distractionFreeMode: true
-    })
-</script>
+<!--<script>-->
+<!--    // 评论插件-->
+<!--    const gitalk = new Gitalk({-->
+<!--        clientID: '92ab8a5b08b100114a00', // 申请下来的ID-->
+<!--        clientSecret: '2bab4805e4fb00609a8efe96583b4e6412cc67af',  // 申请下来的密码-->
+<!--        repo: 'docs', // 仓库名字-->
+<!--        owner: 'hangjob', // 你的Github名字-->
+<!--        admin: ['hangjob'], // 你的Github名字和其他管理员的名字-->
+<!--        // facebook-like distraction free mode-->
+<!--        distractionFreeMode: true-->
+<!--    })-->
+<!--</script>-->
 </body>
 
 </html>
