--- a/index.html
+++ b/index.html
@@ -4,81 +4,100 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="Description">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+    <link rel="icon" href="/favicon.png">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
     <!--  评论  -->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.css">
+    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
+    <script src="https://unpkg.com/dayjs@1.8.21/locale/zh-cn.js"></script>
+    <script>dayjs.locale('zh-cn')</script>
     <!--  结束  -->
+    <style>
+        .cover-main img[alt="logo"] {
+            border-radius: 50%;
+            width: 200px;
+            height: 200px;
+            transition: all 0.35s;
+        }
+
+        .cover-main img[alt="logo"]:hover {
+            transform: rotate(360deg);
+        }
+    </style>
 </head>
 
 <body>
-<div id="app">嘿，小可爱，正在加载中...</div>
-<script>
-    // 搜索配置
-    const search = {
-        search: {
-            placeholder: '输入关键词搜索',
-        },
-    }
-
-    // 基础配置
-    const basics = {
-        name: '',
-        repo: 'https://github.com/Hanxueqing/Douban-Movie.git',
-        externalLinkTarget: '_blank',
-        onlyCover: true, // 首页是否只显示背景
-        coverpage: true,
-        loadSidebar: true,
-        autoHeader: true,
-        loadNavbar: true, // 加载顶部菜单
-        routerMode: 'hash', // default: 'hash' history => nginx try_files $uri $uri/ /index.html;
-        // 复制
-        copyCode: {
-            buttonText: '复制',
-            errorText: '出错啦',
-            successText: '成功'
-        },
-        // 字数
-        count:{
-            countable:true,
-            fontsize:'0.9em',
-            color:'rgb(90,90,90)',
-            language:'chinese'
+    <div id="app">嘿，小可爱，正在加载中...</div>
+    <script>
+        // 搜索配置
+        const search = {
+            search: {
+                placeholder: '输入关键词搜索',
+            },
         }
-    }
 
-    window.$docsify = {
-        ...basics,
-        ...search
-    };
-    
+        // 基础配置
+        const basics = {
+            name: '',
+            repo: 'https://github.com/Hanxueqing/Douban-Movie.git',
+            externalLinkTarget: '_blank',
+            onlyCover: true, // 首页是否只显示背景
+            coverpage: true,
+            loadSidebar: true,
+            autoHeader: true,
+            loadNavbar: true, // 加载顶部菜单
+            routerMode: 'hash', // default: 'hash' history => nginx try_files $uri $uri/ /index.html;
+            formatUpdated: function (time) {
+                return dayjs(time).format('YYYY-MMMM-DD HH:mm:ss dddd');
+            },
+            // 复制
+            copyCode: {
+                buttonText: '复制',
+                errorText: '出错啦',
+                successText: '成功'
+            },
+            // 字数
+            count: {
+                countable: true,
+                fontsize: '0.9em',
+                color: 'rgb(90,90,90)',
+                language: 'chinese'
+            }
+        }
+
+        window.$docsify = {
+            ...basics,
+            ...search
+        };
+
     // 运行命令
     // docsify serve docs
-</script>
-<script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
-<!--<script src="https://cdn.jsdelivr.net/npm/docsify@4.10.0/lib/docsify.min.js"></script>-->
-<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
-<script src="https://unpkg.com/docsify-copy-code@2"></script>
-<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
-<script src="//unpkg.com/docsify-count/dist/countable.js"></script>
-<!-- 评论   -->
-<!--<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/gitalk.min.js"></script>-->
-<!--<script src="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js"></script>-->
+    </script>
+    <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+    <!--<script src="https://cdn.jsdelivr.net/npm/docsify@4.10.0/lib/docsify.min.js"></script>-->
+    <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+    <script src="https://unpkg.com/docsify-copy-code@2"></script>
+    <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
+    <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
+    <!-- 评论   -->
+    <!--<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/gitalk.min.js"></script>-->
+    <!--<script src="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js"></script>-->
 
-<!--<script>-->
-<!--    // 评论插件-->
-<!--    const gitalk = new Gitalk({-->
-<!--        clientID: '92ab8a5b08b100114a00', // 申请下来的ID-->
-<!--        clientSecret: '2bab4805e4fb00609a8efe96583b4e6412cc67af',  // 申请下来的密码-->
-<!--        repo: 'docs', // 仓库名字-->
-<!--        owner: 'hangjob', // 你的Github名字-->
-<!--        admin: ['hangjob'], // 你的Github名字和其他管理员的名字-->
-<!--        // facebook-like distraction free mode-->
-<!--        distractionFreeMode: true-->
-<!--    })-->
-<!--</script>-->
+    <!--<script>-->
+    <!--    // 评论插件-->
+    <!--    const gitalk = new Gitalk({-->
+    <!--        clientID: '92ab8a5b08b100114a00', // 申请下来的ID-->
+    <!--        clientSecret: '2bab4805e4fb00609a8efe96583b4e6412cc67af',  // 申请下来的密码-->
+    <!--        repo: 'docs', // 仓库名字-->
+    <!--        owner: 'hangjob', // 你的Github名字-->
+    <!--        admin: ['hangjob'], // 你的Github名字和其他管理员的名字-->
+    <!--        // facebook-like distraction free mode-->
+    <!--        distractionFreeMode: true-->
+    <!--    })-->
+    <!--</script>-->
 </body>
 
 </html>
