--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
         // 基础配置
         const basics = {
-            name: '',
-            repo: 'https://github.com/Hanxueqing/Douban-Movie.git',
+            name: '羊先生',
+            repo: 'https://hangjob.github.io/docs/#/',
             externalLinkTarget: '_blank',
             onlyCover: true, // 首页是否只显示背景
             coverpage: true,
