--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>羊先生</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="Description">
+    <meta name="keywords" content="羊先生,vipbic官网,全栈导航,Egg.js教程,docsify技巧">
+    <meta name="description" content="我是一个个子不高，长得不帅，家里没钱，单位没权，城里没房，曾经在还有着梦想的废柴青年，他们都叫我行长或者羊先生，在杭工作的湖北人">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <link rel="icon" href="/favicon.png">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
