--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>羊先生</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="description" content="Description">
     <meta name="keywords" content="羊先生,vipbic官网,全栈导航,Egg.js教程,docsify技巧">
     <meta name="description" content="我是一个个子不高，长得不帅，家里没钱，单位没权，城里没房，曾经在还有着梦想的废柴青年，他们都叫我行长或者羊先生，在杭工作的湖北人">
@@ -13,9 +13,16 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
     <!--  评论  -->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.css">
+    <!--  date.js 依赖  -->
     <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
     <script src="https://unpkg.com/dayjs@1.8.21/locale/zh-cn.js"></script>
     <script>dayjs.locale('zh-cn')</script>
+    <!--  代码预览插件  -->
+    <script src="https://cdn.jsdelivr.net/npm/markrun@0.23.0/lib/browser-hljs/index.js"></script>
+    <script src="https://unpkg.com/jquery@1.12.0/dist/jquery.min.js"></script>
+    <!--mo.js依赖-->
+    <script src="https://cdn.jsdelivr.net/npm/@mojs/core"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mojs/player"></script>
     <!--  结束  -->
     <style>
         .cover-main img[alt="logo"] {
@@ -32,74 +39,83 @@
 </head>
 
 <body>
-    <div id="app">嘿，小可爱，正在加载中...</div>
-    <script>
-        // 搜索配置
-        const search = {
-            search: {
-                placeholder: '输入关键词搜索',
-            },
-        }
+<div id="app">嘿，小可爱，正在加载中...</div>
+<script>
+    // 搜索配置
+    const search = {
+        search: {
+            placeholder: '输入关键词搜索',
+        },
+    }
 
-        // 基础配置
-        const basics = {
-            name: '羊先生',
-            repo: 'https://hangjob.github.io/docs/#/',
-            externalLinkTarget: '_blank',
-            onlyCover: true, // 首页是否只显示背景
-            coverpage: true,
-            loadSidebar: true,
-            autoHeader: true,
-            loadNavbar: true, // 加载顶部菜单
-            routerMode: 'hash', // default: 'hash' history => nginx try_files $uri $uri/ /index.html;
-            formatUpdated: function (time) {
-                return dayjs(time).format('YYYY-MMMM-DD HH:mm:ss dddd');
-            },
-            // 复制
-            copyCode: {
-                buttonText: '复制',
-                errorText: '出错啦',
-                successText: '成功'
-            },
-            // 字数
-            count: {
-                countable: true,
-                fontsize: '0.9em',
-                color: 'rgb(90,90,90)',
-                language: 'chinese'
-            }
-        }
+    // 基础配置
+    const basics = {
+        name: '羊先生',
+        repo: 'https://hangjob.github.io/docs/#/',
+        externalLinkTarget: '_blank',
+        onlyCover: true, // 首页是否只显示背景
+        coverpage: true,
+        loadSidebar: true,
+        autoHeader: true,
+        loadNavbar: true, // 加载顶部菜单
+        routerMode: 'hash', // default: 'hash' history => nginx try_files $uri $uri/ /index.html;
+        formatUpdated: function (time) {
+            return dayjs(time).format('YYYY-MMMM-DD HH:mm:ss dddd');
+        },
+        // 复制
+        copyCode: {
+            buttonText: '复制',
+            errorText: '出错啦',
+            successText: '成功'
+        },
+        // 字数
+        count: {
+            countable: true,
+            fontsize: '0.9em',
+            color: 'rgb(90,90,90)',
+            language: 'chinese'
+        },
+    }
 
-        window.$docsify = {
-            ...basics,
-            ...search
-        };
+    window.$docsify = {
+        ...basics,
+        ...search,
+        markdown: function (marked) {
+            markrun.setOptions({
+                template: '',
+                markdownParser: marked,
+            })
+            return markrun
+        }
+    };
 
     // 运行命令
     // docsify serve docs
-    </script>
-    <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
-    <!--<script src="https://cdn.jsdelivr.net/npm/docsify@4.10.0/lib/docsify.min.js"></script>-->
-    <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
-    <script src="https://unpkg.com/docsify-copy-code@2"></script>
-    <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
-    <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
-    <!-- 评论   -->
-    <!--<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/gitalk.min.js"></script>-->
-    <!--<script src="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js"></script>-->
+</script>
+<script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/docsify@4.10.0/lib/docsify.min.js"></script>-->
+<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+<script src="https://unpkg.com/docsify-copy-code@2"></script>
+<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
+<script src="//unpkg.com/docsify-count/dist/countable.js"></script>
 
-    <!--<script>-->
-    <!--    // 评论插件-->
-    <!--    const gitalk = new Gitalk({-->
-    <!--        clientID: '92ab8a5b08b100114a00', // 申请下来的ID-->
-    <!--        clientSecret: '2bab4805e4fb00609a8efe96583b4e6412cc67af',  // 申请下来的密码-->
-    <!--        repo: 'docs', // 仓库名字-->
-    <!--        owner: 'hangjob', // 你的Github名字-->
-    <!--        admin: ['hangjob'], // 你的Github名字和其他管理员的名字-->
-    <!--        // facebook-like distraction free mode-->
-    <!--        distractionFreeMode: true-->
-    <!--    })-->
-    <!--</script>-->
+
+<!-- 评论   -->
+<!--<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/gitalk.min.js"></script>-->
+<!--<script src="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js"></script>-->
+
+<!--<script>-->
+<!--    // 评论插件-->
+<!--    const gitalk = new Gitalk({-->
+<!--        clientID: '92ab8a5b08b100114a00', // 申请下来的ID-->
+<!--        clientSecret: '2bab4805e4fb00609a8efe96583b4e6412cc67af',  // 申请下来的密码-->
+<!--        repo: 'docs', // 仓库名字-->
+<!--        owner: 'hangjob', // 你的Github名字-->
+<!--        admin: ['hangjob'], // 你的Github名字和其他管理员的名字-->
+<!--        // facebook-like distraction free mode-->
+<!--        distractionFreeMode: true-->
+<!--    })-->
+<!--</script>-->
 </body>
 
 </html>
