--- a/index.html
+++ b/index.html
@@ -17,12 +17,6 @@
     <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
     <script src="https://unpkg.com/dayjs@1.8.21/locale/zh-cn.js"></script>
     <script>dayjs.locale('zh-cn')</script>
-    <!--  代码预览插件  -->
-    <script src="https://cdn.jsdelivr.net/npm/markrun@0.23.0/lib/browser-hljs/index.js"></script>
-    <script src="https://unpkg.com/jquery@1.12.0/dist/jquery.min.js"></script>
-    <!--mo.js依赖-->
-    <script src="https://cdn.jsdelivr.net/npm/@mojs/core"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@mojs/player"></script>
     <!--  结束  -->
     <style>
         .cover-main img[alt="logo"] {
@@ -80,18 +74,12 @@
     window.$docsify = {
         ...basics,
         ...search,
-        markdown: function (marked) {
-            markrun.setOptions({
-                template: '',
-                markdownParser: marked,
-            })
-            return markrun
-        }
     };
 
     // 运行命令
     // docsify serve docs
 </script>
+<!-- docsify -->
 <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
 <!--<script src="https://cdn.jsdelivr.net/npm/docsify@4.10.0/lib/docsify.min.js"></script>-->
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
