--- a/mojs/index.html
+++ b/mojs/index.html
@@ -13,7 +13,7 @@
     <div class="point"></div>
     <script src="https://cdn.jsdelivr.net/npm/@mojs/core"></script>
     <script src="https://cdn.jsdelivr.net/npm/@mojs/player"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@mojs/curve-editor"></script>
+<!--    <script src="https://cdn.jsdelivr.net/npm/@mojs/curve-editor"></script>-->
     <script>
         const bouncyCircle = new mojs.Shape({
             parent: '#bouncyCircle',
@@ -29,31 +29,29 @@
             isShowStart: true,
             repeat: 1,
         });
-
-        bouncyCircle.play()
+     
         const mainTimeline = new mojs.Timeline({});
         mainTimeline.add(bouncyCircle)
 
-
         const mojsPlayer = new MojsPlayer({
             add: mainTimeline,
-            isSaveState: true, // determines if should preserve state on page reload
-            isPlaying: false, // playback state
-            progress: 0, // initial progress
-            isRepeat: false, // determines if it should repeat after completion
-            isBounds: false, // determines if it should have bounds
-            leftBound: 0, // left bound position  [0...1]
-            rightBound: 1, // right bound position [0...1]
-            isSpeed: false, // determines if speed control should be open
-            speed: 1, // `speed` value
-            isHidden: false, // determines if the player should be hidden
-            precision: 0.1, // step size for player handle - for instance, after page reload - player should restore timeline progress - the whole timeline will be updated incrementally with the `precision` step size until the progress will be met.
-            name: 'mojs-player', // name for the player - mainly used for localstorage identifier, use to distinguish between multiple local players
-            onToggleHide(isHidden) { // should be called after user taps on the hide-button (isHidden is a boolean, indicating the visibility state of the player)
+            isSaveState: true, // 确定重载页面时是否应保留状态
+            isPlaying: false, // 播放状态
+            progress: 0, // 一开始的位置
+            isRepeat: false, // 确定完成后是否应该重复
+            isBounds: false, // 确定它是否应该有边界
+            leftBound: 0, // 离开的位置  [0...1]
+            rightBound: 1, // 绑定的位置 [0...1]
+            isSpeed: false, // 确定是否应该打开速度控制
+            speed: 1, // 速度
+            isHidden: false, // 是否被隐藏
+            precision: 0.1, // 步骤大小的处理-例如，在页面重新加载-球员应该恢复时间轴进度-整个时间轴将增量更新与“精度”步长，直到进度将满足。
+            name: 'mojs-player', // 播放器的名称——主要用于本地存储标识符，用于区分多个本地播放器
+            onToggleHide(isHidden) { // 应该在用户点击隐藏按钮后调用(isHidden是一个布尔值，指示玩家的可见状态)
                 if (isHidden) {
-                    // do something when player is invisible
+                    // 隐藏的时候做什么
                 } else {
-                    // do something when player is visible
+                    // 显示的时候做什么
                 }
             }
         });
