--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     };
 
     // 运行命令
-    // docsify serve docs
+    // docsify serve docs -p 8901
 </script>
 <!-- docsify -->
 <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
